--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <!-- Your code here -->
+  <img src="https://static.wikia.nocookie.net/konosuba/images/2/22/Kazuma-anime.png/revision/latest?cb=20180328150146">
+  <img src="https://static.wikia.nocookie.net/konosuba/images/3/3f/Megumin-anime.png/revision/latest/scale-to-width-down/250?cb=20180328143334" alt="Megumin">
+  <img src="https://static.wikia.nocookie.net/konosuba/images/1/14/Aqua-anime.png/revision/latest?cb=20180328145536" alt="Aqua" title="Useless goddess">
 
 </body>
 </html>
